# promptwars.xyz

./: .eslintrc.json  package-lock.json  package.json
.github/workflows/: todo-to-issue.yml
database/: alembic.ini  pyproject.toml
database-sequelize/: .eslintrc.json  README.md  db.ts  install.sh  jest.config.ts  package.json  tsconfig.json
database-sequelize/__tests__/: credits-to-user.ts  promptwars-round.test.ts  wallet-to-user.ts
database-sequelize/config/: config.js
database-sequelize/migrations/: 20240730172616-create-table_credits.js  20240730172616-create-table_credits.ts  20240730184837-create-table_wallets.ts  20240730193524-create-table_transactions.ts  20240731154328-create-table_prompts.ts  20240731154335-create-table_rounds.ts  20240731154341-create-table_round_results.ts  20240731154346-create-table_text_to_img.ts  20240731154347-create-table_prompts.ts  20240802183602-add-src-img-url-to-rounds.ts  20240804163030-add-description-and-example-img-url-to-text-to-img.ts  YYYYMMDDHHMMSS-create-user.js
database-sequelize/models/: Credit.ts  Prompt.ts  Round.ts  RoundResult.ts  TextToImg.ts  Transaction.ts  User.ts  Wallet.ts  index.ts
database/alembic/: env.py
database/alembic/versions/: 48d7fd3c02ac_add_credit_balance_and_user_wallet.py  95c15c667cbc_create_user_table.py
database/src/: database.py  main.py
database/src/api/: credit.py  prompt.py  user.py  websocket.py
database/src/models/: credit.py  user.py
database/src/utils/eth/: account.py  usdt_listener.py  w3.py  withdraw.py
web/: package-lock.json  package.json  plopfile.cjs
(+117 files in other folders)
