[tool.poetry]
name = "database"
version = "0.1.0"
description = ""
authors = ["netpoe <gus@aufacicenta.com>"]
readme = "README.md"
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
web3 = "^6.20.1"
scikit-image = "^0.24.0"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
